--- a/hackathon24backend/src/main/resources/application.properties
+++ b/hackathon24backend/src/main/resources/application.properties
@@ -8,3 +8,14 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+#FINVU#
+app.rid=42c06b9f-cc5b-4a53-9119-9ca9d8e9acdb
+app.ts=2019-07-15T11:03:44.427+0000
+app.channelId=finsense
+app.userId=channel@dhanaprayoga
+app.password=7777
+app.loginuri=https://dhanaprayoga.fiu.finfactor.in/finsense/API/V2/User/Login
+
+#FILE#
+upload.dir=uploads
