--- a/hackathon24backend/src/main/resources/application.properties
+++ b/hackathon24backend/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 #FINVU#
+app.baseurl=https://dhanaprayoga.fiu.finfactor.in/finsense/API/V2
 app.rid=42c06b9f-cc5b-4a53-9119-9ca9d8e9acdb
 app.ts=2019-07-15T11:03:44.427+0000
 app.channelId=finsense
