--- a/hackathon24backend/src/main/resources/application.properties
+++ b/hackathon24backend/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.application.name=hackathon24backend
+#server.servlet.context-path=/hackathon/
+#springdoc.swagger-ui.path=/swagger-ui.html
+
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/hackathon24
 spring.datasource.username=postgres
 spring.datasource.password=root
