--- a/hackathon24backend/pom.xml
+++ b/hackathon24backend/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>hackathon24backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>hackathon24backend</name>
-	<packaging>war</packaging>
+<!--	<packaging>war</packaging>-->
 	<description>It is a hackathon project</description>
 	<url/>
 	<licenses>
